# fastapi_study_room

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py
app/docs/images/: erd-1.0.drawio
app/models/: __init__.py  reservation.py  review.py  room.py  user.py
app/repositories/: __init__.py  reservation_repo.py  review_repo.py  room_repo.py  user_repo.py
app/routers/: __init__.py  auth.py  reservations.py  reviews.py  rooms.py  user.py
app/schemas/: __init__.py  reservation.py  review.py  room.py  user.py
app/services/: __init__.py  auth_service.py  reservation_service.py  review_service.py  room_service.py  user_service.py
